--- a/index.html
+++ b/index.html
@@ -4,8 +4,134 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 3</title>
+    <!-- Google font cdn -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Wittgenstein:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+     <!-- font awsome cdn -->
+    <script src="https://kit.fontawesome.com/ab7b3c66e1.js" crossorigin="anonymous"></script>
+    <!-- DaisyUi CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- tailwind css  -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'color-primary': 'rgb(171, 239, 95)',
+                        'color-primary-btn': 'rgba(171, 239, 95,0.5)',
+                        'card-color':"rgb(256,256,256)",
+                        'bg-color':'rgba(0,0,0,0.1)'
+                    }
+                }
+            }
+        }
+    </script>
+    <style>
+        .roboto-thin {
+            font-family: "Roboto", sans-serif;
+        }
+        /* main{
+          background-color: rgba(0, 0, 0, 0.1);
+        } */
+    </style>
 </head>
-<body>
+<body class="roboto-thin">
+    <!-- header section -->
+    <header class="md:container mx-auto">
+        <!-- navber section -->
+        <nav>
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                  <a class="btn btn-ghost text-3xl"><i class="fa-solid fa-arrow-right -rotate-45 bg-color-primary btn btn-circle"></i>Rinterio</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu menu-horizontal px-1 text-base">
+                    <li class="font-bold"><a>Home</a></li>
+                    <li><a>Services</a></li>
+                    <li><a>Portfolio</a></li>
+                    <li><a>Blogs</a></li>
+                    <li><a>Contact Us</a></li>
+                  </ul>
+                </div>
+                <div class="navbar-end">
+                  <i class="fa-solid fa-magnifying-glass btn btn-circle hidden md:flex lg:flex mr-3"></i>
+                  <i class="fa-solid fa-cart-shopping btn btn-circle hidden md:flex lg:flex mr-4"></i>
+                  <a class="btn hidden md:flex lg:flex bg-color-primary text-lg rounded-3xl">Book Consult<i class="fa-solid fa-circle-arrow-up rotate-45"></i></a>
+                  <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-5 w-5"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M4 6h16M4 12h8m-8 6h16" />
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </nav>
+        <!-- banner section -->
+        <div class=" my-8 md:my-12 lg:my-20">
+          <img src="./assets/banner.png" alt="" class="m-auto">
+          <h2 class="text-xl md:text-3xl lg:text-6xl text-center font-bold">A barn house of this design has a <br/>striking appearance</h2>
+          <p class="text-center text-sm md:text-base lg:text-base mt-2.5 md:mt-3 lg:mt-3.5">The barn house captivates with its blend of rustic charm and modern <br class="hidden md:flex lg:flex">sophistication, featuring weathered wood, sleek metal accents, and large <br class="hidden md:flex lg:flex"> windows that flood the space with natural light.</p>
+          <div class="flex justify-center"><a class="btn btn-ghost text-xl bg-color-primary-btn px-5 rounded-3xl w-11/12 my-5 md:w-auto">View Details <div class="border-1 rounded-3xl bg-color-primary"><i class="fa-solid fa-arrow-right -rotate-45"></i></div></a></div>
+        </div>
+    </header>
+    <!-- main section -->
+    <main class="md:container mx-auto">
+      <!-- sectin-2:vector -->
+      <section>
+        <img src="./assets/Vector.png" alt="" class="hidden lg:flex">
+      </section>
+      <!-- section-1:We design... -->
+      <section class="grid lg:flex justify-between  p-3 lg:px-20 ">
+        <!-- content part -->
+        <div class="grid gap-5 lg:gap-0">
+            <button class="btn bg-card-color w-[150px] rounded-3xl p-3"><i class="fa-solid fa-arrow-right"></i>About US</button>
+            <h2 class="text-2xl lg:text-4xl font-extrabold text-center lg:text-left">We design thoughtful,<br>liveable spaces</h2>
+            <p class="text-sm lg:text-base font-base text-center text-center lg:text-left">The barn house capativates with its blend of rustic charm and <br class="hidden lg:flex">modern sophistication, featuring weathered wood, sleek metel accents.</p>
+            <div class="grid md:flex lg:grid gap-5">
+              <div class="flex gap-5 border-0 rounded-2xl p-5">
+                <img src="./assets/commercial.png" alt="" class="h-10 lg:h-full">
+                <div class="">
+                  <h2 class="text-xl font-bold">Commercial</h2>
+                  <p class="text-sm lg:text-base font-base">The barn house captivates with its blend <br class="hidden md:flex lg:flex">of rustic charm and modern.</p>
+                </div>
+              </div>
+              <div class="flex gap-5  bg-card-color border-0 rounded-2xl p-5 ">
+                <img src="./assets/residential.png" alt="" class="h-10 lg:h-full">
+                <div>
+                  <h2 class="text-xl font-bold">Residential</h2>
+                  <p class="text-sm lg:text-base font-base">The barn house captivates with its blend <br class="hidden md:flex lg:flex">of rustic charm and modern.</p>
+                </div>
+              </div>
+            </div>
+        </div>
+        <!-- image part -->
+        <div>
+          <img src="./assets/Rectangle.png" alt="" class="md:w-full mt-8 lg:mt-0 md:h-3/4 lg:h-auto">
+
+        </div>
+      </section>
+
+
+    </main>
+    <footer>
+
+
+
+    </footer>
     
 </body>
 </html>
