added also one challenge section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <nav>
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
-                  <a class="btn btn-ghost text-3xl"><i class="fa-solid fa-arrow-right -rotate-45 bg-color-primary btn btn-circle"></i>Rinterio</a>
+                  <a class="btn btn-ghost text-3xl"><div class="border-1 rounded-3xl bg-color-primary h-[35px]"><i class="fa-solid fa-arrow-right -rotate-45 ml-1 px-1 py-1"></i></div>Rinterio</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1 text-base">
@@ -110,7 +110,7 @@
         <img src="./assets/Vector.png" alt="" class="hidden lg:flex ml-[10%] pt-10">
       </section>
       <!-- section-2:We design... -->
-      <section class="grid lg:flex justify-between  p-3 lg:px-20 w-5/6 mx-auto">
+      <section class="grid lg:flex justify-between  p-3 lg:px-20 w-5/6 mx-auto lg:gap-5">
         <!-- content part -->
         <div class="grid gap-5 lg:gap-0">
             <button class="btn bg-card-color w-[150px] rounded-3xl p-3 mx-auto lg:m-0"><i class="fa-solid fa-arrow-right"></i>About US</button>
@@ -136,32 +136,8 @@
         <!-- image part -->
         <div>
           <img src="./assets/Rectangle.png" alt="" class="md:w-full mt-8 lg:mt-0 md:h-3/4 lg:h-auto">
-
         </div>
       </section>
-      <!-- section-3:card design
-      <section class="flex w-full justify-around">
-        <div>
-          <div class="h-[22px] w-[22px]"><i class="fa-regular fa-message h-[33px] w-[33px]"></i></div>
-          <h2>235+</h2>
-          <p>Happy Client Review</p>
-        </div>
-        <div>
-          <i class="fa-brands fa-creative-commons-nd"></i>
-          <h2>50+</h2>
-          <p>Work Departments</p>
-        </div>
-        <div>
-          <i class="fa-solid fa-user-tie"></i>
-          <h2>30k+</h2>
-          <p>Our Happy Client</p>
-        </div>
-        <div>
-          <i class="fa-solid fa-user-group"></i>
-          <h2>307+</h2>
-          <p>Staff Members</p>
-        </div>
-      </section> -->
       <!-- section-3:our works -->
       <section class=" grid gap-5 mt-10 w-full mx-auto">
         <div class="flex justify-center"><button class="btn bg-card-color w-[250px] rounded-3xl p-3 text-base font-extrabold"><i class="fa-solid fa-arrow-right"></i>How we works</button></div>
@@ -263,13 +239,38 @@
                 <img src="./assets/img5.png" alt="" class="h-[200px] w-auto">
               </div>
             </div>
-
           </div>
         </div>
       </section>
-      <hr class="h-3 bg-card-color">
-      <!-- swction-5:let's discuss -->
-      <section class="bg-[url('/assets/bg.jpg')] grid gap-5 my-3 py-5">
+      <!-- section-5:our projects -->
+      <section class="grid gap-5 my-20 mx-3 lg:mx-auto">
+        <div class="flex justify-center"><button class="btn bg-card-color w-[250px] rounded-3xl p-3 text-base font-extrabold"><i class="fa-solid fa-arrow-right"></i>Let's see our projects</button></div>
+        <h2 class="text-2xl lg:text-4xl font-extrabold text-center">Our Top Projects</h2>
+        <p class="text-sm lg:text-base font-base text-center">The barn house captivates with its blend of rustic charm and modern sophistication, <br class="hidden md:flex lg:flex">featuring weathered wood, sleek metal accents.</p>
+        <div class="grid lg:flex justify-center gap-5">
+          <div class="w-full lg:w-[23.5%] p-5 border-1 rounded-2xl bg-card-color grid gap-3">
+            <img src="https://images.skyscrapercenter.com/building/chittagongcitycenter_render.jpg" alt="" class="h-[500px] w-full border-1 rounded-2xl"> 
+            <h1 class="text-2xl font-extrabold">Chittagong City Center</h1>
+            <h3 class="text-lg font-bold">Chittagong</h3>
+            <p class="w-full text-justify text-base">The Chittagong City Center (also called City Center), is a 204.2 meters (670 feet) proposed and approved 51-story tower in <a href=""  class="text-blue-900 text-xl font-base">See more...</a></p>
+          </div>
+          <div class="w-full lg:w-[23.5%] p-5 border-1 rounded-2xl bg-card-color grid gap-3">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/Hilton.Dhaka.jpg/250px-Hilton.Dhaka.jpg" alt="" class="h-[500px] w-full border-1 rounded-2xl">
+            <h1 class="text-2xl font-extrabold">Hilton Dhaka</h1>
+            <h3 class="text-lg font-bold">Dhaka</h3>
+            <p class="w-full text-justify text-base">Hilton Dhaka is a Hilton brand hotel located at Gulshan Avenue in Dhaka, Bangladesh. The building is topped off, and the hotel is expected to open <a href="" class="text-blue-900 text-xl font-base">See more...</a> </p>
+          </div>
+          <div class="w-full lg:w-[23.5%] p-5 border-1 rounded-2xl bg-card-color grid gap-3">
+            <img src="https://cdn.bdnews24.com/bdnews24/media/bdnews24-english/import/media/2010/06/05/enimg-163361-2010-06-05.jpg" alt="" class="h-[500px] w-full border-1 rounded-2xl">
+            <h1 class="text-2xl font-extrabold">Concord Grand</h1>
+            <h3 class="text-lg font-bold">Dhaka</h3>
+            <p class="w-full text-justify text-base">Concord Grand is a mixed-use building located at 169/1, Shantinagar, Dhaka-1217, Bangladesh. It is one of the tallest in <a href="" class="text-blue-900 text-xl font-base">See more...</a></p>
+          </div>
+        </div>    
+      </section>
+      <hr class="h-1 bg-card-color">
+      <!-- swction-6:let's discuss -->
+      <section class="bg-[url('/assets/bg.jpg')] grid gap-5 my-2 py-5">
         <div class="flex justify-center"><button class="btn bg-card-color w-[250px] rounded-3xl p-3 text-base font-extrabold bg-color-primary-btn"><i class="fa-solid fa-arrow-right"></i>Let’s Connect</button></div>
         <h2 class="text-2xl lg:text-4xl font-extrabold text-center">Let’s Discuss Next Project</h2>
         <p class="text-sm lg:text-base font-base text-center">The barn house captivates with its blend of rustic charm and modern sophistication, <br class="hidden md:flex lg:flex">featuring weathered wood, sleek metal accents.</p>
@@ -290,11 +291,12 @@
           </div>
         </div>
       </section>
+      <hr class="h-3 bg-card-color">
     </main>
     <footer>
-      <!-- section-6:footer -->
+      <!-- section-7:footer -->
       <section class="bg-black-color w-full py-20 grid gap-10" >
-        <a class="items-center gap-2 text-2xl text-white bg-black-color flex justify-center border-0 font-bold"><i class="fa-solid fa-arrow-right -rotate-45 bg-color-primary btn btn-circle"></i>Rinterio</a>
+        <a class="btn btn-ghost text-3xl text-white"><div class="border-1 rounded-3xl bg-color-primary h-[35px] text-black"><i class="fa-solid fa-arrow-right -rotate-45 ml-1 px-1 py-1"></i></div>Rinterio</a>
         <p class="text-base lg:text-base font-base text-gray-500 font-bold text-center ">The barn house capativates with its blend <br class="lg:hidden"> of rustic charm and <br class="hidden lg:flex">modern <br class="lg:hidden">sophistication, featuring weathered <br class="lg:hidden">wood, sleek metel accents.</p>
         <div class="text-white grid lg:flex justify-around w-[80%] mx-auto text-xl font-bold gap-5">
           <a href="" class="m-auto">Home</a>
@@ -304,10 +306,9 @@
           <a href="" class="m-auto">Conact Us</a>
         </div>
         <div class="mx-auto">
-          <a class="btn md:flex lg:flex bg-color-primary text-lg rounded-3xl w-[200px] mx-auto">Book Consult<i class="fa-solid fa-circle-arrow-up rotate-45"></i></a>
+          <a class="btn md:flex lg:flex bg-color-primary text-lg rounded-3xl w-[320px] lg:w-[200px] mx-auto">Book Consult<i class="fa-solid fa-circle-arrow-up rotate-45"></i></a>
         </div>
       </section>
-    </footer>
-    
+    </footer>   
 </body>
 </html>
