--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </section>
       <!-- section-4:our latest -->
       <section class="grid gap-5 mt-20 lg:ml-10 w-[100%] lg:w-11/12 mx-auto mb-10">
-        <div class="flex justify-center"><button class=" bg-card-color rounded-3xl p-3 px-10 text-base font-extrabold bg-color-primary-btn"><i class="fa-solid fa-arrow-right pr-2"></i>Explore our Latest works</button></div>
+        <div class="flex justify-center"><div class="flex  text-left"><button class=" bg-card-color rounded-3xl p-3 px-10 text-base font-extrabold bg-color-primary-btn"><i class="fa-solid fa-arrow-right pr-2"></i>Explore our Latest works</button></div></div>
         <h2 class="text-2xl lg:text-4xl font-extrabold text-center">Our Latest Portfolio</h2>
         <p class="text-sm lg:text-base font-base text-center">The barn house captivates with its blend of rustic charm and modern sophistication, <br class="hidden md:flex lg:flex">featuring weathered wood, sleek metal accents.</p>
         <div class="w-[92%] lg:w-[80%] h-auto grid mx-auto">
